<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">2D Tank Game</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="high_scores">High Scores</string>
    <string name="highest_score_is">Highest Score is : </string>
    <string name="ok">Ok</string>
    <string name="gameover">Game Over!</string>
    <string name="youscore">You scored : </string>
    <string name="survial_mode">Survival Mode</string>
    <string name="mission_mode">Mission Mode</string>
    <string name="multiplayer_mode">Multiplayer Mode</string>
    <string name="settings">Settings</string>
    <string name="high_scores_btn">High Scores</string>
    <string name="level_beginner_txt">Beginner</string>
    <string name="level_medium_txt">Medium</string>
    <string name="level_hard_txt">Hard</string>
    <string name="level_expert_txt">Expert</string>
    <string name="resume_game_btn">Resume</string>
    <string name="new_game_btn">New Game</string>

</resources>