<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/survival_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="81dp"
        android:text="@string/survial_mode" />

    <Button
        android:id="@+id/mission_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/survival_btn"
        android:layout_below="@+id/survival_btn"
        android:text="@string/mission_mode" />

    <Button
        android:id="@+id/multiplayer_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mission_btn"
        android:layout_below="@+id/mission_btn"
        android:text="@string/multiplayer_mode" />

</RelativeLayout>